# ic-2025-gr5-p3-grupo3

./: .gitignore  README.md
P3IC/source/detect/: CMakeLists.txt  README_FOR_REPORT.md  apt-packages.txt  install_deps.sh  plot_results.py  requirements.txt  run_experiments.sh  run_experiments_full.sh
P3IC/source/detect/src/: CMakeLists.txt  main.cc
P3IC/source/detect/src/utils/: CMakeLists.txt  image.h
